# zentty

./: .gitignore  .wtp.yml  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  FrameworksLocal  README.md  TRADEMARKS.md  project.yml
.githooks/: pre-commit
rust/: Cargo.toml
rust/crates/zentty-core/: Cargo.toml
rust/crates/zentty-core/src/: agent.rs  bookmarks.rs  command_palette.rs  commands.rs  config.rs  focus_history.rs  layout.rs  lib.rs  restore.rs  server_detection.rs  servers.rs  session_restore.rs  task_manager.rs  task_runner.rs  theme.rs  tmux.rs  worklane.rs
rust/crates/zentty-core/tests/: agent_compat.rs  agent_consent.rs  agent_ipc_protocol.rs  bookmarks.rs  closed_pane_restore.rs  command_availability.rs  command_palette.rs  config_agent_integrations.rs  layout_compat.rs  pane_focus_history.rs  server_detection.rs  servers.rs  session_restore_store.rs  task_manager.rs  task_runner_discovery.rs  task_runner_execution.rs  tmux_compat.rs  worklane_store_restore.rs  workspace_recipe_bridge.rs
rust/crates/zentty-pty/: Cargo.toml
rust/crates/zentty-pty/src/: lib.rs  native.rs
rust/crates/zentty-pty/tests/: session_request.rs
rust/crates/zentty-terminal/: Cargo.toml
rust/crates/zentty-terminal/src/: clean_copy.rs  clipboard.rs  global_search.rs  input.rs  lib.rs  screen.rs  search.rs  selection.rs  shell.rs
rust/crates/zentty-terminal/tests/: clean_copy_pipeline.rs  clipboard_model.rs  global_search.rs  input_payload.rs  screen_model.rs  search_session.rs  selection_model.rs  shell_escaping.rs  viewport_scroll.rs
rust/crates/zentty-win/: Cargo.toml  build.rs
rust/crates/zentty-win/src/: app.rs  desktop.rs  host.rs  ipc.rs  lib.rs  main.rs  open_with.rs  server_browser.rs  task_manager.rs
rust/scripts/: install-windows.ps1  package-windows.ps1  uninstall-windows.ps1
(+1011 files in other folders)
